Changes with Apache 1.3.21

  *) Fix the <Files ~ "^\.ht"> container to *really* deny all access.
     Without the Satisfy All, .ht* files could still be fetched if
     they were within the scope of a Satisfy Any directive.
     [Ken Coar]

  *) Print a warning when an attempt is made to use line-end comments.
     Apparently they are not detected/handled gracefully by all directives.
     [Martin Kraemer]

  *) (TPF only) Take advantage of improvements to select(), fork(), and
     exec() in the TPF operating system.  
     [David McCreedy <McCreedy@us.ibm.com>]

  *) (Cygwin only) Fix problems with signals sent to child processes;
     Improve auto-configuration for Cygwin.
     [Stipe Tolj <tolj@wapme-systems.de>]

  *) Added Mod_Vhost_Alias to the project file so that it builds as an
     external module (VHOST.NLM). 
     [Brad Nicholes <BNICHOLES@novell.com>]

  *) Fix problem with lingering_close() on Windows.  Issuing read() on the
     socket descriptor on Windows always fails. Should be calling
     recv() instead of read() on Windows.
     [Bill Stoddard, Bill Rowe]

  *) Added an abnormal exit clean up routine to make sure that ApacheC NLM
     is always unloaded cleanly.  This fixes the "Ouch! out of memory"
     problem when restarting Apache for NetWare after an abnormal exit
     due to configuration errors. 
     [Brad Nicholes <BNICHOLES@novell.com>]

  *)_Change the compile switches for ReliantUNIX SVR4 not to use
     SYSV semaphores, because upon reaching the system limit of
     semaphores, the whole server exits (not just one child).
     Apache could be improved to use NO_SEM_UNDO flag (see test/time-sem.c)
     which is currently implemented only in the time-sem program, but not in
     apache. Until then, revert to using fcntl() locks.
     [Martin Kraemer]

  *) Changes to 'ab': fixed int overruns, added statistics, output in
     csv/gnuplot format, rudimentary SSL support and various other tweaks